--- a/markov8pat_inst16ghost.ipynb
+++ b/markov8pat_inst16ghost.ipynb
@@ -39,24 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "struct AugMatrix\n",
-    "    mat::Matrix\n",
-    "    init::Vector\n",
-    "end\n",
-    "\n",
-    "struct AugDblMatrix\n",
-    "    mat1::Matrix\n",
-    "    mat2::Matrix\n",
-    "    init::Vector\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
    "outputs": [
@@ -90,54 +72,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "9×9 Matrix{Float64}:\n",
-       " 0.1   0.166667  0.0   0.166667  0.5  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.333333  0.0   0.0       0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.166667  0.1   0.166667  0.5  0.0  0.0  0.0  0.0\n",
-       " 0.45  0.333333  0.45  0.333333  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.45  0.0       0.45  0.333333  0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.0       0.0   0.0       0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.0       0.0   0.0       0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.0       0.0   0.0       0.0  0.0  0.0  0.0  0.0\n",
-       " 0.0   0.0       0.0   0.0       0.0  0.0  0.0  0.0  0.0"
+       " 0.1   0.166667  0.0   0.166667  0.5  0.0   0.0  0.0  0.0\n",
+       " 0.0   0.333333  0.0   0.0       0.0  0.0   0.0  0.0  0.0\n",
+       " 0.0   0.166667  0.1   0.166667  0.5  0.1   0.0  0.0  0.0\n",
+       " 0.45  0.333333  0.45  0.333333  0.0  0.45  0.0  0.0  0.0\n",
+       " 0.45  0.0       0.45  0.333333  0.0  0.45  0.0  0.0  0.0\n",
+       " 0.0   0.0       0.0   0.0       0.0  0.0   0.0  0.0  0.0\n",
+       " 0.0   0.0       0.0   0.0       0.0  0.0   0.0  0.0  0.0\n",
+       " 0.0   0.0       0.0   0.0       0.0  0.0   0.0  0.0  0.0\n",
+       " 0.0   0.0       0.0   0.0       0.0  0.0   0.0  0.0  0.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#0 = rest, 1 = bass, 2 = LH\n",
-    "                #00    #01  #02   #10  #11  #12  #zeros\n",
-    "rockBassMatrix = [0.1e0 1//6  0   1//6  0.5    0 0 0 0 #00\n",
-    "                    0   1//3  0     0    0    0  0 0 0  #01\n",
-    "                    0   1//6  0.1   1//6  0.5   0 0 0 0  #02\n",
-    "                    0.45 1//3  0.45  1//3 0    0 0 0 0  #10\n",
-    "                    0.45 0    0.45  1//3  0    0 0 0 0  #11\n",
-    "                    0.0  0    0      0   0    0 0 0 0    #12\n",
+    "                #00    #01  #02   #10  #11  #12     #zeros\n",
+    "rockBassMatrix = [0.1 1//6  0   1//6  0.5    0      0 0 0 #00\n",
+    "                    0   1//3  0     0    0    0     0 0 0  #01\n",
+    "                    0   1//6  0.1   1//6  0.5   0.1 0 0 0  #02\n",
+    "                    0.45 1//3  0.45  1//3 0    0.45 0 0 0  #10\n",
+    "                    0.45 0    0.45  1//3  0    0.45 0 0 0  #11\n",
+    "                    0  0    0      0   0    0       0 0 0    #12\n",
     "                    zeros(3,9)]                 #zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1×9 Matrix{Float64}:\n",
-       " 1.0  1.0  1.0  1.0  1.0  0.0  0.0  0.0  0.0"
+       " 1.0  1.0  1.0  1.0  1.0  1.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +168,7 @@
        "AugMatrix([0.1 0.16666666666666666 … 0.0 0.0; 0.0 0.3333333333333333 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], [0.1, 0.0, 0.1, 0.4, 0.4, 0.0, 0.0, 0.0, 0.0])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +574,7 @@
        "abcsolo8patinst16ghost (generic function with 1 method)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +591,7 @@
     "  pattrans::AugMatrix,\n",
     "  insttrans::AugMatrix,\n",
     "  feel::String;\n",
-    "        variation=\"disco\"\n",
+    "        variation=\"rock\"\n",
     "    )\n",
     "    s = \"\"\n",
     "    curdyn = markovrand(dyn.init)\n",
@@ -633,7 +615,7 @@
     "    end\n",
     "    s = insert(s, findlast(occursin(\"acbdefgABCDEFG\"), s)-1, \"!fermata!\") #final fermata\n",
     "    s = replace(s, \"[]\" => \"z\") #rest\n",
-    "    s = makeppheader(\"Computer-generated \\\\`Etude for Solo Drum Kit\", String(@functionName), \"$(Dates.now())\", \"4/4\", feel, 80) * s * \"|]\\n\"\n",
+    "    s = makeppheader(\"Computer-generated \\\\`Etude for Solo Drum Kit\", String(@functionName) * \"/\" * variation, \"$(Dates.now())\", \"4/4\", feel, 80) * s * \"|]\\n\"\n",
     "    return(s)\n",
     "end\n"
    ]
@@ -1120,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 196,
    "metadata": {
     "scrolled": true
    },
@@ -1140,7 +1122,7 @@
        " 0.0  0.0  0.0  0.0  0.0       0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1159,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1179,7 @@
        "AugMatrix([0.1 0.2 … 0.0 0.0; 0.2 0.2 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], [0.1, 0.2, 0.1, 0.2, 0.2, 0.2, 0.0, 0.0, 0.0])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1203,7 @@
        " 0.3  0.0       0.25  0.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1232,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1252,7 @@
        "AugMatrix([0.1 0.3333333333333333 … 0.0 0.0; 0.3 0.3333333333333333 … 0.0 0.0; … ; 0.0 0.0 … 0.0 0.0; 0.0 0.0 … 0.0 0.0], [0.1, 0.1, 0.0, 0.4, 0.4, 0.0, 0.0, 0.0, 0.0])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1283,7 @@
        " 0.1  0.1  0.2  0.1  0.1  0.1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1309,7 @@
        " 0.1  0.2  0.1  0.1  0.1  0.1"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1335,7 @@
        " 0.1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1364,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1373,7 +1355,7 @@
        "AugDblMatrix([0.2 0.1 … 0.3 0.2; 0.4 0.2 … 0.3 0.2; … ; 0.1 0.1 … 0.1 0.1; 0.1 0.1 … 0.1 0.1], [0.4 0.2 … 0.3 0.2; 0.2 0.4 … 0.2 0.2; … ; 0.2 0.1 … 0.2 0.1; 0.1 0.2 … 0.1 0.1], [0.3, 0.3, 0.1, 0.1, 0.1, 0.1])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1379,7 @@
        " 0.6  0.6  0.4  0.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1406,7 @@
        " 1.0  1.0  1.0  1.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1430,7 @@
        " 0.4"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1450,7 @@
        "AugMatrix([0.0 0.2 0.2 0.2; 0.2 0.0 0.4 0.4; 0.2 0.2 0.0 0.4; 0.6 0.6 0.4 0.0], [0.0, 0.2, 0.4, 0.4])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1474,7 @@
        " 0.1  0.1  0.1  0.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1504,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1524,7 @@
        "AugMatrix([0.1 0.4 0.4 0.4; 0.6 0.1 0.4 0.4; 0.2 0.4 0.1 0.2; 0.1 0.1 0.1 0.0], [0.4, 0.4, 0.2, 0.0])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,6 +1643,120 @@
     "writetune(\"funkghosttest.abp\", funksolo)\n",
     "\n",
     "abptest(\"funkghosttest.abp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "%%abc-include percussions-JBH.abh\n",
+      "\n",
+      "I:linebreak $\n",
+      "\n",
+      "#ifdef MIDI\n",
+      "#define !>! \"[I:volinc 50]\"\n",
+      "#define !Q! \"[I:vol 20]\" \n",
+      "                %%%ghost\n",
+      "#define !U! \"[I:vol 40]\" \n",
+      "                %%%unaccent\n",
+      "#define !N! \"[I:volinc -25]\" \n",
+      "            %%%tenuto for trash hat\n",
+      "#else\n",
+      "#define !N! \"\\\"^_\\\"\" \n",
+      "                %%%tenuto\n",
+      "#define !Q! !(.!!).! \n",
+      "                %%%ghost\n",
+      "#define !U! !anti!  \n",
+      "                %%%unaccent\n",
+      "#endif\n",
+      "\n",
+      "X:1\n",
+      "T:Computer-generated \\`Etude for Solo Drum Kit\n",
+      "C:#abcsolo8patinst16ghost#26/rock\n",
+      "O:2021-12-24T20:22:16.212\n",
+      "M:4/4\n",
+      "L:1/8\n",
+      "Q:\"Rock/Funk 16th feel\" 1/4=80\n",
+      "K:none clef=perc\n",
+      "[V:1 clef=perc, stem=up]     % activate abc2xml.py map\n",
+      "%%voicemap drummap  % activate abcm2ps/abc2svg map\n",
+      "%%MIDI channel 10   % activate abc2midi map\n",
+      "%%MIDI program 0\n",
+      "%%flatbeams\n",
+      "%%propagate-accidentals not\n",
+      "%%pos ornament up\n",
+      "%%ornament up\n",
+      "%%MIDI fermatafixed\n",
+      "|:!mf![^gF]/2[F/2]z/2[F/2][^gc]y[F]/2[F/2] [^g]/2[!Q!c/2][F]y[^gcF]yz/2[!Q!c/2] |\n",
+      "[^gF]y[F]/2[F/2][^gc]y[F]y [^gF]/2[!Q!c/2][F]/2[F/2][^gc]yz/2[F/2] |\n",
+      "[^g]y[F]y[^gcF]y[F]/2[F/2] [^g]/2[!Q!c/2][F]y[^gc]/2[F/2]z/2[!Q!c/2] |\n",
+      "[1c/2z/2z/2c/2 c/2e/2z/2G/2 e/2e/2z/2c/2 c/2F/2F/2A/2 :|2c/2z/2z/2c/2 c/2e/2z/2G/2 e/2e/2z/2c/2 !<(!c/2F/2!<)!F/2A/2 \n",
+      "|:!mp![^eF]y[^eF]/2[F/2][^ec]y[^eF]/2[F/2] [^e]/2[!Q!c/2][^eF]y[^ecF]/2[F/2][_e]/2[!Q!c/2] |\n",
+      "[^eF]/2[F/2][^e]y[^ec]/2[F/2][^e]y [^e]/2[!Q!c/2][^e]/2[!Q!c/2][^ec]/2[F/2][_e]/2[!Q!c/2] |\n",
+      "[^eF]/2[F/2][^e]/2[!Q!c/2][^ecF]y[^eF]/2[F/2] [^e]/2[!Q!c/2][^eF]/2[F/2][^ec]/2[!Q!c/2][_eF]/2[!Q!c/2] |\n",
+      "[1A/2c/2F/2c/2 c/2z/2z/2c/2 F/2c/2c/2G/2 G/2F/2z/2c/2 :|2A/2c/2F/2c/2 c/2z/2z/2c/2 F/2c/2c/2G/2 !>(!G/2F/2!>)!z/2c/2 \n",
+      "|:!f![^g^DF]/2[!Q!c/2][^gF]/2[!Q!c/2][^g^DcF]/2[F/2][^g]/2[!Q!c/2] [^g^DF]/2[F/2][^g]/2[!Q!c/2][^g^Dc]/2[!Q!c/2][^gF]y |\n",
+      "[^g^DF]/2[!Q!c/2][^gF]/2[F/2][^g^Dc]y[^g]/2[F/2] [^g^D]y[^gF]/2[F/2][^g^Dc]/2[!Q!c/2][^gF]y |\n",
+      "[^g^D]/2[F/2][^g]/2[!Q!c/2][^g^Dc]/2[F/2][^g]/2[F/2] [^g^D]/2[!Q!c/2][^gF]y[^g^Dc]y[^gF]y |\n",
+      "[1F/2c/2z/2e/2 F/2e/2e/2A/2 A/2G/2c/2e/2 c/2e/2e/2G/2 :|2F/2c/2z/2e/2 F/2e/2e/2A/2 A/2G/2c/2e/2 !>(!c/2e/2!>)!e/2G/2 \n",
+      "|:!p![gF]/2[F/2]z/2[F/2][gc]/2[!Q!c/2][F]/2[F/2] [g]yzy[gcF]/2[F/2]z/2[!Q!c/2] |\n",
+      "[gF]y[F]/2[F/2][gc]/2[F/2][F]y [gF]y[F]/2[!Q!c/2][gcF]y[F]/2[F/2] |\n",
+      "[g]/2[!Q!c/2][F]y[gc]/2[!Q!c/2][F]/2[F/2] [g]yz/2[!Q!c/2][gcF]/2[F/2]z/2[!Q!c/2] |\n",
+      "[1c/2e/2F/2c/2 c/2e/2e/2e/2 e/2G/2e/2A/2 e/2A/2c/2e/2 :|2c/2e/2F/2c/2 c/2e/2e/2e/2 e/2G/2e/2A/2 !<(!e/2A/2!<)!c/2!fermata!e/2 \n",
+      "|]\n"
+     ]
+    }
+   ],
+   "source": [
+    "halffunksolo = abcsolo8patinst16ghost(4, 0.5*funkBass+0.5*rockBass, 0.5*funkFill+0.5*rockFill, dyn, 0.5*funkPat+0.5*rockPat, 0.5*funkInst+0.5*rockInst, \"Rock/Funk 16th feel\")\n",
+    "print(halffunksolo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcm2ps-8.14.12 (2021-07-14)\r\n",
+      "File halffunktest-ps.abc\r\n",
+      "File percussions-JBH.abh\r\n",
+      "Output written on halffunktest.xhtml (1 page, 1 title, 52475 bytes)\r\n",
+      "4.59 June 27 2021 abc2midi\r\n",
+      "writing MIDI file halffunktest.mid\r\n",
+      "Warning in line-char 41-0 : Track 1 Bar 19 has 9/2 units instead of 4 in repeat\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "halffunktest-ps.abc:29:44: warning: Line overfull (637pt of 628pt)\r\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Process(`\u001b[4mcmd\u001b[24m \u001b[4m/C\u001b[24m \u001b[4mstart\u001b[24m \u001b[4mhalffunktest.xhtml\u001b[24m`, ProcessExited(0))"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "writetune(\"halffunktest.abp\", halffunksolo)\n",
+    "\n",
+    "abptest(\"halffunktest.abp\")"
    ]
   },
   {
